sass/main.scss
/* ... */
    .artwork-result{
        padding:10px;
        background-color:#fff;
        cursor: pointer;
        display: inline-block;
        width: 100%;
        margin: 0;
        margin-bottom: 3px;
    }

    .artwork-result h1{margin:0;padding:0;}
    .artwork-result h2{margin:0;padding:0;line-height:1em;}

    .artwork-result.validImage, .universal .artwork-result {
      .artwork-image{
        width: 50%;
        float: left;
        text-align: center;
      }
      .artwork-summary {
        width: 50%;
        float: right;
        padding-left: 10px;
      }
      .artwork-summary h1{
        font-size: 1em;
        line-height: 1.1em;
      }
      .artwork-summary h2{
        font-size: .9em;
        line-height: 1em;
        font-family: $MiaGroteskRegular;
        margin-top: .5em;
      }
      .artwork-summary p{
        font-size: .857em;
        line-height: 1.143em;
        margin-top: .5em;
      }
      .artwork-image > div {
          max-height: 200px !important;
      }
      .artwork-image img {
          max-width: 100%;
          max-height: 100%;
      }
    }

    .objects-wrap .focused {
      border-bottom: 3px solid $primary;
    }
    .objects-wrap .focused .artwork-result {
      margin-bottom: 0;
    }

    /* not working
    .artwork-result p:not(:first-child){
        display:none;
    }
    */
    .artwork-image div > p, .artwork-result .provenance {
        display: none;
    }

    .artwork-result p.location{
        text-align:right;
        display: inline-block;
    }

    .artwork-image div > p:first-child{
        display: none;
    }


.objects-focus-sticky{
    position: fixed;
    top: 0;
    right: 0;
}

.objects-focus{
    float:left;
    position:relative;
    width: 100%;
    margin: 0;
    transform: translate3d(0px,0px,0px);
}

    .objects-focus h1{
        font-family: $MiaGroteskBold;
        font-size:1.357em;
        color: $primary;
    }
    span.dated{
      font-family: $MiaGroteskRegular;
    }
    .info .objects-focus h1 {
      border-top: none;
      padding-top: 0;
      margin: 0;
    }

    .objects-focus h2 a {
      color: $primary;
    }

    .objects-focus h5{
        font-family: $MiaGroteskRegular;
        font-size:1.214em;
        line-height:1.429em;
        margin-top:.637em;
        cursor:hand;
        margin-top:10px;
    }
    .objects-focus .tombstone{
        font-size:.857em;
        line-height:1.143em;
        margin-top: .5em;
        padding:0;
        margin-bottom: 0;
    }
    .objects-focus .gifted{
        font-size:.714em;
        line-height:1.3em;
        text-transform: uppercase;
        padding-top:1.92em;
    }
    .objects-focus .description{
      padding-top:1em;
    }
    .objects-focus .artwork-image{
        width:100%;
        height:auto;
        margin-bottom: 7px;
        border-bottom: 3px solid $primary;
    }


.search-wrap {
  z-index: 4;
}
.search-wrap div:first-child {
    min-width: 23em; // initial width, overridden in JS according to search term length
    max-width: 99vw;
    margin:0 auto;
    color:$primary;
    opacity: 0.95;
}
.search-wrap .mdl-textfield {
  min-width: 100px;
}

.search-wrapper {
    background-color:$whitish;
    padding:2em;
    margin-bottom:15px;
    border-radius:3px;
    -webkit-box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.search-input {
    font-size: 1.5em;
    border: none;
    background: transparent;
    text-align: center;
    border-bottom: 3px solid $primary;
    font-family: $MiaGroteskLight;
    -webkit-appearance: none;
    -webkit-border-radius: 0;
    border-radius: 0;
}

.mdl-textfield{
    width:100%;
    min-width:350px;
    padding-left:1em;
    padding-right:1em;
    background-color: white;

}

.mdl-textfield__input {
    color:$primary;
    border-color:$primary;
    border-width:0 0 3px 0;
    padding:0.5em;
    text-align:center;
}

.objectTotal {
    top:0;
    color:$primary;
}
.numbers {
  font-family: $MiaGroteskBold;
  color: rgba(35,35,35,.5);
  padding-left: 10px;
  font-size: .9em;
}
::-webkit-input-placeholder {
   color: $support;
}

:-moz-placeholder { /* Firefox 18- */
   color: $support;
}

::-moz-placeholder {  /* Firefox 19+ */
   color: $support;
}

:-ms-input-placeholder {
   color: $support;
}
/* ===== TOOLBAR STYLES ===== */
.toolbar {
  background: $primary;
}
.filter-button {
  border: 3px solid #ffffff;
  padding: 5px 20px;
  float: right;
}
.filter-button a, .filter-button a:hover {
  color: #ffffff;
}
.filter-button:hover {
  opacity: .7;
}
.views {
  color: #ffffff;
  font-size: 2em;
}
.views .List:hover, .views .Grid:hover {
  opacity: .7;
}

@media screen and (max-width: 414px) {

    .toolbar{
        & .mdl-grid{
            justify-content:space-between;
        }
    }
    .mdl-cell--2-col{
        & .filter-button {
            align-self:flex-start;
            order: 1;
        }
    }
    .mdl-cell--4-col{
        align-self:flex-end;
        order:2;
    }
}

/* ===== SEARCH RESULTS STYLES ===== */
.link-bar, .back-button {
  display: inline-block;
  background: rgb(35,35,35);
  margin-top: 10px;
}
.link-bar i, .link-bar > a {
  font-size: 1.5em;
  line-height: 1em;
  padding: 10px;
  border-right: 2px solid #fff;
  cursor: pointer;
  -webkit-transition: all .5s ease; /* Safari and Chrome */
  -moz-transition: all .5s ease; /* Firefox */
  -ms-transition: all .5s ease; /* IE 9 */
  -o-transition: all .5s ease; /* Opera */
  transition: all .5s ease;
}
.link-bar .social a {
    color: #ffffff;
    text-decoration: none;
    font-size: 1em;
    padding: 0 10px;
    line-height: 1em;
}
.link-bar i:hover {
    opacity: .7;
}
.share {
  margin-top: 0.5em;
}
.social img {
  width: 1.5em;
  height: auto;
  margin-right: 0.5em;
}
.social {
  background-color: $primary;
  display: inline-block;
  padding: 10px 2px 5px 10px;
  margin-right: 2px;
}
/* ... */

